# asgard-discord-bot-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile
.github/: dependabot.yaml
.github/workflows/: build-pr.yaml  release-please.yaml  release.yaml  semantic-pr.yaml
src/: events.rs  main.rs
