[package]
name = "asgard-discord-bot-rust"
version = "1.1.1"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
parsercher = "3.1.6"
raxios = "0.5.2"
regex = "1.10.2"
serde = "1.0.195"
serenity = "0.12.0"
tokio = { version = "1.35.1", features = ["rt", "full"] }
reqwest = { version = "0.11.23", features = ["blocking"] }