[package]
name = "asgard-discord-bot-rust"
version = "1.2.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
parsercher = "3.1.6"
raxios = "0.5.2"
regex = "1.10.2"
pocketbase-sdk = "0.1.1"
serde = { version = "1.0.195" , features = ["derive"] }
tokio = { version = "1.35.1", features = ["rt", "full"] }
reqwest = { version = "0.12.2", features = ["blocking"] }
dotenv = "0.15.0"
base64 = "0.22.0"

serenity = "0.12.0"
# Migration needed
#serenity = "0.12.1"
#poise = "0.6.1"
